[package]
name = "debug_unwrap"
version = "1.0.0"
edition = "2021"
description = "Adds the method debug_unwrap for when you just want to make it compile."
license = "MIT"
documentation = "https://docs.rs/debug_unwrap"
homepage = "https://lib.rs/debug_unwrap"
repository = "https://github.com/Heavenston/debug_unwrap"

[dependencies]

[features]
default = ["out"]
out = []
o = []
peel = []
